# python-project-lvl3

./: .gitignore  Makefile  README.md  logging.ini  pyproject.toml
.github/workflows/: flake8.yml  test.yml
page_loader/: __init__.py
page_loader/scripts/: exceptions.py  name_creator.py  page_loader.py
tests/: test_page_loader.py
tests/fixtures/: ru-hexlet-io-courses.html  www-dolekemp96-org-main-htm.html
tests/fixtures/test_page1/: www-test1-com.html
