[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["alena-yudzina <lenok.ok.lol@gmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.2"
requests = "^2.25.1"
coverage = "^5.5"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"